Bug 490579 - "Share > Send to device..." feature from context menu works once and then fails until Dolphin is restarted
Summary: "Share > Send to device..." feature from context menu works once and then fai...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-purpose
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 491474 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-07-20 19:08 UTC by Patrick Silva
Modified: 2024-09-03 16:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-07-20 19:08:05 UTC
STEPS TO REPRODUCE
2. connect an android phone to usb port
3. activate file transfer mode in android phone
1. open Dolphin
4. right-click on a .jpg file in Dolphin, hover over "Share" submenu and choose "Send to device..."
5. close the "Send file - Dolphin" window
6. repeat the step 4

OBSERVED RESULT
nothing happens. If I restart Dolphin after the last step and then repeat the step 4, the window with "Send file - Dolphin" opens as expected.

EXPECTED RESULT
"Share > Send to device..." feature should work consistently

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2024-09-01 13:43:39 UTC
*** Bug 491474 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2024-09-01 16:54:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/purpose/-/merge_requests/111
Comment 3 Nicolas Fella 2024-09-02 11:05:26 UTC
Git commit 3be90f87bacce30963bf313962b760baf1630c35 by Nicolas Fella.
Committed on 01/09/2024 at 16:54.
Pushed by nicolasfella into branch 'master'.

Fix sharing via menu a second time

61fdd2ebedde3baf2a83af714c29aa9369b51c0a refactored the code but failed to account for that the view will be reused

M  +4    -4    src/widgets/JobDialog.qml
M  +4    -5    src/widgets/menu.cpp

https://invent.kde.org/frameworks/purpose/-/commit/3be90f87bacce30963bf313962b760baf1630c35