Fix sharing via menu a second time

61fdd2ebedde3baf2a83af714c29aa9369b51c0a refactored the code but failed to account for that the view will be reused

BUG: 490579